# news_aggregator

./: Dockerfile  compose.yaml  entrypoint.prod.sh  manage.py  pyproject.toml
api/: serializers.py  urls.py  views.py
core/: models.py
core/migrations/: 0001_initial.py
news_agregator/: asgi.py  settings.py  urls.py  wsgi.py
