[project]
name = "news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "django>=6.0.3",
    "django-filter>=25.2",
    "djangorestframework>=3.17.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "gunicorn>=25.1.0",
    "markdown>=3.10.2",
    "psycopg2>=2.9.11",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
]
